fixed filter for manufacturer final

--- a/app/views/listings/_form.html.erb
+++ b/app/views/listings/_form.html.erb
@@ -102,6 +102,11 @@
   </div>
 
   <div class="field">
+    <%= form.label :price %>
+    <%= form.number_field :price %>
+  </div>
+
+  <div class="field">
     <%= form.label :public_name %>
     <%= form.text_field :public_name %>
   </div>
