--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -93,6 +93,11 @@
 </p>
 
 <p>
+  <strong>Price:</strong>
+  <%= @listing.price %>
+</p>
+
+<p>
   <strong>Public name:</strong>
   <%= @listing.public_name %>
 </p>
