--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -9,6 +9,9 @@
             "name",
             "0") %>
 
+        <%= label_tag :state, "State: " %>
+        <%= select_tag :state, options_for_select(["All"] + State.all.map{|c| [c.state]}) %>
+
         <%= label_tag :order, "Order" %>
         <%= select_tag :order, options_for_select([
                                                       "A-Z",
