fixed like and unlike

--- a/app/views/listings/like.js.erb
+++ b/app/views/listings/like.js.erb
@@ -1,2 +1,2 @@
-$("#like-count").html("<%= j render 'listings/like', listing: @listing %>");
-$("like-link").html("<%= j render 'listings/like_link', listing: @listing %>");
+$("#like-count").html("<%= j render 'listings/likes', listing: @listing %>");
+$("#like-link").html("<%= j render 'listings/like_link', listing: @listing %>");
