--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -34,7 +34,7 @@
                 <div class="col-12">
                     <% if current_user&.admin %>
                     <div class="btn-group">
-                        <%= link_to 'Edit', edit_listing_path(@game), class: 'btn btn-warning' %>
+                        <%= link_to 'Edit', edit_listing_path(@listing), class: 'btn btn-warning' %>
                         <%= link_to 'Delete', @listing, method: :delete, class: 'btn btn-danger' %>
                     </div>
                     <% end %>
