added controller to enable pages on site

--- a/app/views/listings/_form.html.erb
+++ b/app/views/listings/_form.html.erb
@@ -132,6 +132,11 @@
   </div>
 
   <div class="field">
+    <%= form.label :images %>
+    <%= form.file_field :images, multiple: true %>
+  </div>
+
+  <div class="field">
     <%= "Feature Listing?" %>
     <%= form.check_box :featured %>
     <%= "($15)" %>
