--- a/app/assets/stylesheets/manufacturers.scss
+++ b/app/assets/stylesheets/manufacturers.scss
@@ -1,3 +1,17 @@
 // Place all the styles related to the manufacturers controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+div.item {
+  verticle-align: top;
+  display: inline-block;
+  text-align: center;
+  width: 240px;
+}
+img {
+  width: 240px;
+  height: 135px;
+  background-color: none;
+}
+.caption {
+  display: block;
+}
