--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,7 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
+    <%= stylesheet_link_tag 'app', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
@@ -12,5 +13,5 @@
     <%= render 'layouts/navbar' %>
     <%= yield %>
   </body>
-  <%=  render 'layouts/footer' %>
 </html>
+<%=  render 'layouts/footer' %>
