--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,5 +1,5 @@
 <!-- Footer -->
-<footer class="page-footer font-small bg-dark text-white pt-4">
+<footer class="footer font-small bg-dark text-white pt-4">
 
   <!-- Footer Links -->
   <div class="container-fluid text-center text-md-left">
