--- a/app/views/listings/_form.html.erb
+++ b/app/views/listings/_form.html.erb
@@ -1,153 +1,167 @@
-<%= form_with(model: listing, local: true) do |form| %>
-  <% if listing.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(listing.errors.count, "error") %> prohibited this listing from being saved:</h2>
+<div class="container">
+  <%= form_with(model: listing, local: true) do |form| %>
+    <% if listing.errors.any? %>
+      <div id="error_explanation">
+        <h2><%= pluralize(listing.errors.count, "error") %> prohibited this listing from being saved:</h2>
 
-      <ul>
-        <% listing.errors.full_messages.each do |message| %>
-          <li><%= message %></li>
-        <% end %>
-      </ul>
+        <ul>
+          <% listing.errors.full_messages.each do |message| %>
+            <li><%= message %></li>
+          <% end %>
+        </ul>
+      </div>
+    <% end %>
+
+    <div class="field">
+      <%= form.label :title %>
+      <%= form.text_field :title %>
+    </div>
+
+    <div class="field">
+      <%= form.label :Manufacturer %>
+      <%= form.collection_select :manufacturer_ids, Manufacturer.all, :id, :name, {}, {multiple:true} %>
+    </div>
+
+    <div class="field">
+      <%= form.label :description %>
+      <%= form.rich_text_area :description %>
+    </div>
+
+    <div class="field">
+      <%= form.label :equipment %>
+      <%= form.text_area :equipment %>
+    </div>
+
+    <div class="field">
+      <%= form.label :model %>
+      <%= form.text_field :model %>
+    </div>
+
+    <div class="field">
+      <%= form.label :length %>
+      <%= form.number_field :length %>
+    </div>
+
+    <div class="field">
+      <%= form.label :beam %>
+      <%= form.number_field :beam %>
+    </div>
+
+    <div class="field">
+      <%= form.label :draft %>
+      <%= form.number_field :draft %>
+    </div>
+
+    <div class="field">
+      <%= form.label :displacement %>
+      <%= form.number_field :displacement %>
+    </div>
+
+    <div class="field">
+      <%= form.label :year %>
+      <%= form.number_field :year %>
+    </div>
+
+    <div class="field">
+      <%= form.label :cabins %>
+      <%= form.number_field :cabins %>
+    </div>
+
+    <div class="field">
+      <%= form.label :berths %>
+      <%= form.number_field :berths %>
+    </div>
+
+    <div class="field">
+      <%= form.label :engine %>
+      <%= form.text_field :engine %>
+    </div>
+
+    <div class="field">
+      <%= form.label :fuel %>
+      <%= form.text_field :fuel %>
+    </div>
+
+    <div class="field input-group mb-3">
+      <div class="input-group-prepend">
+        <label class="input-group-text" for="fuel">Fuel</label>
+      </div>
+      <select class="custom-select" id="fuel">
+        <option selected>Choose...</option>
+        <option value="1">Gas</option>
+        <option value="2">Diesel</option>
+        <option value="3">Electric</option>
+      </select>
+    </div>
+
+    <div class="field">
+      <%= form.label :hours %>
+      <%= form.number_field :hours %>
+    </div>
+
+    <div class="field">
+      <%= form.label :horsepower %>
+      <%= form.number_field :horsepower %>
+    </div>
+
+    <div class="field">
+      <%= form.label :state %>
+      <%= form.collection_select :state_ids, State.all, :id, :state, {}, {multiple:true} %>
+    </div>
+
+    <div class="field">
+      <%= form.label :location %>
+      <%= form.text_field :location %>
+    </div>
+
+    <div class="field">
+      <%= form.label :zip_code %>
+      <%= form.number_field :zip_code %>
+    </div>
+
+    <div class="field">
+      <%= form.label :price %>
+      <%= form.number_field :price %>
+    </div>
+
+    <div class="field">
+      <%= form.label :public_name %>
+      <%= form.text_field :public_name %>
+    </div>
+
+    <div class="field">
+      <%= form.label :email %>
+      <%= form.email_field :email %>
+    </div>
+
+    <div class="field">
+      <%= form.label :phone_number %>
+      <%= form.phone_field :phone_number %>
+    </div>
+
+    <div class="field">
+      <%= form.label :thumbnail %>
+      <%= form.file_field :thumbnail %>
+    </div>
+
+    <div class="field">
+      <%= form.label :images %>
+      <%= form.file_field :images, multiple: true %>
+    </div>
+
+    <div class="field">
+      <%= "Feature Listing?" %>
+      <%= form.check_box :featured %>
+      <%= "($15)" %>
+    </div>
+
+    <div class="field">
+      <%= form.label :published %>
+      <%= form.date_select :published %>
+    </div>
+
+    <div class="actions">
+      <%= form.submit %>
     </div>
   <% end %>
-
-  <div class="field">
-    <%= form.label :title %>
-    <%= form.text_field :title %>
-  </div>
-
-  <div class="field">
-    <%= form.label :Manufacturer %>
-    <%= form.collection_select :manufacturer_ids, Manufacturer.all, :id, :name, {}, {multiple:true} %>
-  </div>
-
-  <div class="field">
-    <%= form.label :description %>
-    <%= form.rich_text_area :description %>
-  </div>
-
-  <div class="field">
-    <%= form.label :equipment %>
-    <%= form.text_area :equipment %>
-  </div>
-
-  <div class="field">
-    <%= form.label :model %>
-    <%= form.text_field :model %>
-  </div>
-
-  <div class="field">
-    <%= form.label :length %>
-    <%= form.number_field :length %>
-  </div>
-
-  <div class="field">
-    <%= form.label :beam %>
-    <%= form.number_field :beam %>
-  </div>
-
-  <div class="field">
-    <%= form.label :draft %>
-    <%= form.number_field :draft %>
-  </div>
-
-  <div class="field">
-    <%= form.label :displacement %>
-    <%= form.number_field :displacement %>
-  </div>
-
-  <div class="field">
-    <%= form.label :year %>
-    <%= form.number_field :year %>
-  </div>
-
-  <div class="field">
-    <%= form.label :cabins %>
-    <%= form.number_field :cabins %>
-  </div>
-
-  <div class="field">
-    <%= form.label :berths %>
-    <%= form.number_field :berths %>
-  </div>
-
-  <div class="field">
-    <%= form.label :engine %>
-    <%= form.text_field :engine %>
-  </div>
-
-  <div class="field">
-    <%= form.label :fuel %>
-    <%= form.text_field :fuel %>
-  </div>
-
-  <div class="field">
-    <%= form.label :hours %>
-    <%= form.number_field :hours %>
-  </div>
-
-  <div class="field">
-    <%= form.label :horsepower %>
-    <%= form.number_field :horsepower %>
-  </div>
-
-  <div class="field">
-    <%= form.label :state %>
-    <%= form.collection_select :state_ids, State.all, :id, :state, {}, {multiple:true} %>
-  </div>
-
-  <div class="field">
-    <%= form.label :location %>
-    <%= form.text_field :location %>
-  </div>
-
-  <div class="field">
-    <%= form.label :zip_code %>
-    <%= form.number_field :zip_code %>
-  </div>
-
-  <div class="field">
-    <%= form.label :price %>
-    <%= form.number_field :price %>
-  </div>
-
-  <div class="field">
-    <%= form.label :public_name %>
-    <%= form.text_field :public_name %>
-  </div>
-
-  <div class="field">
-    <%= form.label :email %>
-    <%= form.email_field :email %>
-  </div>
-
-  <div class="field">
-    <%= form.label :phone_number %>
-    <%= form.phone_field :phone_number %>
-  </div>
-
-  <div class="field">
-    <%= form.label :thumbnail %>
-    <%= form.file_field :thumbnail %>
-  </div>
-
-  <div class="field">
-    <%= form.label :images %>
-    <%= form.file_field :images, multiple: true %>
-  </div>
-
-  <div class="field">
-    <%= "Feature Listing?" %>
-    <%= form.check_box :featured %>
-    <%= "($15)" %>
-  </div>
-
-  <div class="field">
-    <%= form.label :published %>
-    <%= form.date_select :published %>
-  </div>
-
-  <div class="actions">
-    <%= form.submit %>
-  </div>
-<% end %>
+</div>
