--- a/app/assets/stylesheets/app.scss
+++ b/app/assets/stylesheets/app.scss
@@ -3,6 +3,7 @@
 @import "states.scss";
 @import "actiontext.scss";
 @import "pages.scss";
+@import 'bootstrap/dist/css/bootstrap';
 
 .fixed-top {
   position: fixed;
