added devise confirmable

--- a/app/assets/stylesheets/app.scss
+++ b/app/assets/stylesheets/app.scss
@@ -3,6 +3,8 @@
 @import "states.scss";
 @import "actiontext.scss";
 @import "pages.scss";
+@import "font-awesome-sprockets";
+@import "font-awesome";
 @import 'bootstrap/dist/css/bootstrap';
 
 .fixed-top {
