--- a/app/assets/stylesheets/app.scss
+++ b/app/assets/stylesheets/app.scss
@@ -4,6 +4,13 @@
 @import "actiontext.scss";
 @import "pages.scss";
 @import 'bootstrap/dist/css/bootstrap';
+/*
+ *= require_tree .
+ *= require_self
+ *= require font-awesome
+ */
+@import "font-awesome-sprockets";
+@import "font-awesome";
 
 .fixed-top {
   position: fixed;
@@ -33,6 +40,3 @@ body {
   height: 225px;
   background-color: #343A40;
 }
-*= require
-@import "font-awesome-sprockets";
-@import "font-awesome";
