made changes from cars

--- a/app/assets/stylesheets/app.scss
+++ b/app/assets/stylesheets/app.scss
@@ -1,11 +1,15 @@
 @import "listings.scss";
 @import "manufacturers.scss";
 @import "states.scss";
-@import "actiontext.scss";
+@import "./actiontext.scss";
 @import "pages.scss";
-@import "font-awesome-sprockets";
-@import "font-awesome";
+//@import "font-awesome-sprockets";
+//@import "font-awesome";
 @import 'bootstrap/dist/css/bootstrap';
+
+//hide simple_form checkmarks
+.form-control.is-invalid{ background-image: none; }
+.form-control.is-valid{ background-image: none; }
 
 .fixed-top {
   position: fixed;
