--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -75,7 +75,7 @@
 
   <!-- Copyright -->
   <div class="footer-copyright text-center py-3">© 2020 Copyright
-    <%= link_to "SailBoatsForSale.org", root_path %>
+    <%= link_to "boats.com", root_path %>
   </div>
   <!-- Copyright -->
 
