--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,7 @@
     <%= csp_meta_tag %>
     
     <%= stylesheet_link_tag 'app', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= javascript_include_tag Ckeditor.cdn_url %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
@@ -13,6 +14,7 @@
     <%= render 'layouts/navbar' %>
     <%= render 'layouts/alerts'%>
     <%= yield %>
+    <br>
     <%=  render 'layouts/footer' %>
   </body>
 </html>
