--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -1,33 +1,36 @@
-<div class="search-container">
-    <%= form_tag(listings_search_path, remote: true) do %>
-        <div class="field">
-          <%= label_tag :manufacturer, "Manufacturer: " %>
+<div class="container">
+  <div class="search-container">
+      <%= form_tag(listings_search_path, remote: true) do %>
+          <div class="field">
+            <%= label_tag :manufacturer, "Manufacturer: " %>
 
-          <%= select_tag :manufacturer, options_from_collection_for_select(
-              @manufacturers.to_a.unshift(Manufacturer.new(id: 0, name: "All")),
-              "name",
-              "name",
-              "0") %>
+            <%= select_tag :manufacturer, options_from_collection_for_select(
+                @manufacturers.to_a.unshift(Manufacturer.new(id: 0, name: "All")),
+                "name",
+                "name",
+                "0") %>
 
-          <%= label_tag :state, "State: " %>
-          <%= select_tag :state, options_for_select(["All"] + State.all.map{|c| [c.state]}) %>
+            <%= label_tag :state, "State: " %>
+            <%= select_tag :state, options_for_select(["All"] + State.all.map{|c| [c.state]}) %>
 
-          <%= label_tag :order, "Order" %>
-          <%= select_tag :order, options_for_select([
-                                                        "A-Z",
-                                                        "Z-A",
-                                                        "Highest Priced",
-                                                        "Lowest Priced",
-                                                        "Newest Listings",
-                                                        "Oldest Listings"
-                                                    ]), {include_blank: "Order"} %>
+            <%= label_tag :order, "Order" %>
+            <%= select_tag :order, options_for_select([
+                                                          "A-Z",
+                                                          "Z-A",
+                                                          "Highest Priced",
+                                                          "Lowest Priced",
+                                                          "Newest Listings",
+                                                          "Oldest Listings"
+                                                      ]), {include_blank: "Order"} %>
 
 
-          <%= submit_tag "Filter" %>
-        </div>
-      <% end %>
+            <%= submit_tag "Filter" %>
+          </div>
+        <% end %>
+  </div>
 </div>
 <div id="manufacturers">
   <%=  render 'listings/manufacturers' %>
 </div>
+<%= render 'layouts/footer' %>
 
