--- a/app/views/listings/new.html.erb
+++ b/app/views/listings/new.html.erb
@@ -1,5 +1,8 @@
-<h1>New Listing</h1>
+<div class="container">
 
-<%= render 'form', listing: @listing %>
+  <h1>New Listing</h1>
 
-<%= link_to 'Back', listings_path %>
+  <%= render 'form', listing: @listing %>
+
+  <%= link_to 'Back', listings_path %>
+</div>
